# 421_fed_ML

./: LICENSE  README.md  requirements.txt  test.py
insider-attack-scenario-pt/: README.md  pyproject.toml
insider-attack-scenario-pt/insider_attack_scenario_pt/: __init__.py  client_app.py  server_app.py  task.py
